@@ -3208,6 +3208,14 @@
             "rhudea"
          ]
       },
+      "Rebecca Hauck" : {
+         "emails" : [
+             "rhauck@adobe.com"
+         ],
+         "nicks" : [
+             "rhauck"
+         ]
+      },
       "Ricky Mondello" : {
          "emails" : [
             "rmondello@apple.com"
